[package]
name = "booper"
version = "0.2.0"
edition = "2024"
description = "Increments project version numbers and releases them"
license = "MIT"
repository = "https://github.com/RuairidhWilliamson/booper"
keywords = ["cli", "tool"]
categories = ["command-line-utilities", "development-tools"]
readme = "readme.md"

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
dialoguer = "0.12.0"
ignore = "0.4.25"
regex = "1.8.4"
semver = "1.0.17"

[lints.rust]
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
# Cargo
wildcard_dependencies = "warn"
cargo_common_metadata = "warn"

# Restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
exit = "warn"
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"

# Nursery
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
option_if_let_else = "allow"

# Pedantic
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
default_trait_access = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
map_unwrap_or = "allow"
unnecessary_debug_formatting = "allow"
